--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - aliX/fix-srtool-build
     pull_request:
 
 jobs:
@@ -23,7 +24,6 @@ jobs:
           chain: ${{ matrix.runtime }}
           package: runtime-${{ matrix.runtime }}
           runtime_dir: runtimes/${{ matrix.runtime }}
-          tag: 1.60.0
 
       - name: Summary
         run: |
