--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -104,13 +104,13 @@ try-runtime = [
 static_assertions = "1.1.0"
 getrandom = { version = "0.2", features = ["js"] }
 safe-mix = { version = "1.0.1", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
-  "derive",
-] }
-serde = { version = "1.0.136", optional = true, features = ["derive"] }
-scale-info = { version = "2.0.1", default-features = false, features = [
-  "derive",
-] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
+hex-literal = { version = "0.3.4", optional = true }
+log = { version = "0.4.17", default-features = false }
+scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
+serde = { version = "1.0.144", optional = true, features = ["derive"] }
+smallvec = "1.9.0"
+
 lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
 frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.29" }
