--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -130,6 +130,48 @@ try-runtime = [
        "pallet-session/try-runtime",
        "pallet-multisig/try-runtime",
        "cumulus-pallet-aura-ext/try-runtime",
+	"frame-executive/try-runtime",
+	"frame-try-runtime",
+	"frame-system/try-runtime",
+	"pallet-authority-discovery/try-runtime",
+	"pallet-authorship/try-runtime",
+	"pallet-balances/try-runtime",
+	"pallet-transaction-payment/try-runtime",
+	"pallet-collective/try-runtime",
+	"pallet-im-online/try-runtime",
+	"pallet-membership/try-runtime",
+	"pallet-multisig/try-runtime",
+	"pallet-offences/try-runtime",
+	"pallet-preimage/try-runtime",
+	"pallet-scheduler/try-runtime",
+	"pallet-session/try-runtime",
+	"pallet-timestamp/try-runtime",
+	"pallet-utility/try-runtime",
+  "frame-executive/try-runtime",
+	"frame-try-runtime",
+	"frame-system/try-runtime",
+	"pallet-authority-discovery/try-runtime",
+	"pallet-authorship/try-runtime",
+	"pallet-balances/try-runtime",
+	"pallet-transaction-payment/try-runtime",
+	"pallet-collective/try-runtime",
+	 
+	"pallet-im-online/try-runtime",
+	 
+	"pallet-membership/try-runtime",
+	"pallet-multisig/try-runtime",
+	
+	"pallet-offences/try-runtime",
+	"pallet-preimage/try-runtime",
+	
+	"pallet-scheduler/try-runtime",
+	"pallet-session/try-runtime",
+	
+	"pallet-timestamp/try-runtime",
+	# "pallet-tips/try-runtime",
+	# "pallet-babe/try-runtime",
+	# "pallet-vesting/try-runtime",
+	"pallet-utility/try-runtime",
 ]
 
 [dependencies]
