--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -125,6 +125,7 @@ try-runtime = [
   "cumulus-pallet-dmp-queue/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
   "cumulus-pallet-xcm/try-runtime",
+  "parachain-info/try-runtime",
   #"pallet-xcm/try-runtime",
 ]
 
