--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.0.0
         with:
-          fail_ci_if_error: true
+          fail_ci_if_error: false
 
 
   try-runtime:
