--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-registry-
 
-      - name: Cache cargo index.
+      - name: Cache cargo index
         uses: actions/cache@v2.1.7
         with:
           path: ~/.cargo/git
