--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -40,7 +40,7 @@ std = [
   "pallet-contracts-primitives/std",
   "pallet-contracts-rpc-runtime-api/std",
   "pallet-contracts/std",
-  #"pallet-xcm/std",
+  "pallet-xcm/std",
   "polkadot-parachain/std",
   "polkadot-runtime-common/std",
   "xcm/std",
@@ -50,7 +50,7 @@ std = [
   "cumulus-pallet-dmp-queue/std",
   "cumulus-pallet-parachain-system/std",
   "cumulus-pallet-xcm/std",
-  #"cumulus-pallet-xcmp-queue/std",
+  "cumulus-pallet-xcmp-queue/std",
   "cumulus-primitives-core/std",
   "cumulus-primitives-timestamp/std",
   "cumulus-primitives-utility/std",
@@ -94,7 +94,7 @@ runtime-benchmarks = [
   "pallet-collator-selection/runtime-benchmarks",
   "pallet-membership/runtime-benchmarks",
   "pallet-contracts/runtime-benchmarks",
-  #"pallet-xcm/runtime-benchmarks",
+  "pallet-xcm/runtime-benchmarks",
   "xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
@@ -177,7 +177,10 @@ pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/parityt
 pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.29" }
-#pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.29" }
+
+cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29", default-features = false }
+pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.29" }
+
 pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
 pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
