--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -132,6 +132,8 @@ try-runtime = [
   "cumulus-pallet-dmp-queue/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
   "cumulus-pallet-xcm/try-runtime",
+  "cumulus-pallet-xcmp-queue/try-runtime",
+  "pallet-xcm/try-runtime",
   "parachain-info/try-runtime",
 ]
 # Make contract callable functions marked as __unstable__ available. Do not enable
