--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,16 +109,17 @@ jobs:
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v3
-
-      - name: Unpack
-        run: bunzip2 .maintain/paradis-snapshot-full.top.bz2; bunzip2 .maintain/paradis-snapshot-full.child.bz2
-
-      - name: Install latest stable Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          target: ${{ env.target }}
+      - name: Check Version
+        run: |
+         echo -n "eden_rev=" >> $GITHUB_OUTPUT
+         curl -s --request POST   --url https://nodle-parachain.api.onfinality.io/public   --header 'Content-Type: application/json'   --data '{
+             "jsonrpc": "2.0", 
+              "method": "system_version",    
+              "params": [],
+              "id": 1
+            }' | jq '{"result"}[]' >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
+        id: get_version
 
       - name: Install Rust nightly
         uses: actions-rs/toolchain@v1
@@ -127,9 +128,20 @@ jobs:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
           default: true
-
-      - name: Try Runtime
-        uses: actions-rs/cargo@v1
+      - name: Cache a dir
+        uses: actions/cache@v3
+        id: cachedir
         with:
-          command: run
-          args: --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  snap --snapshot-path=".maintain/paradis-snapshot-full"
+          path: snapshots
+          key: ${{steps.get_version.outputs.eden_rev}}-snapshot
+
+      - name: Try runtime update snap
+        if: steps.cachedir.outputs.cache-hit != 'true'
+        run: |
+            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  live --snapshot-path="snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
+      - name: Try runtime reuse snap
+        if: steps.cachedir.outputs.cache-hit == 'true'
+        run: |
+            cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  snap --snapshot-path="snapshots/paradis-snapshot-full"
+
+
