--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,15 +133,18 @@ jobs:
         id: cachedir
         with:
           path: snapshots
-          key: ${{steps.get_version.outputs.eden_rev}}-snapshot
+          key: ${{steps.get_version.outputs.eden_rev}}
 
       - name: Try runtime update snap
         if: steps.cachedir.outputs.cache-hit != 'true'
         run: |
+            install -d snapshots
+            date > snapshots/created_at
             cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  live --snapshot-path="snapshots/paradis-snapshot-full" -u ${{ env.try-runtime-uri}}
       - name: Try runtime reuse snap
         if: steps.cachedir.outputs.cache-hit == 'true'
         run: |
+            cat snapshots/created_at
             cargo run --release --bin nodle-parachain --features=try-runtime try-runtime --execution native --chain ${{ env.try-runtime-chain }} --no-spec-name-check  on-runtime-upgrade  snap --snapshot-path="snapshots/paradis-snapshot-full"
 
 
