--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,27 @@ env:
   try-runtime-uri: wss://eden-rpc.dwellir.com:443
 
 jobs:
+  linters:
+    runs-on: ubuntu-latest-8-cores
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: ${{ env.nightly }}
+          target: ${{ env.target }}
+          components: rustfmt,clippy
+
+      - name: Rustfmt Check
+        uses: actions-rust-lang/rustfmt@v1
+
+      - name: Clippy
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features -- -A clippy::type_complexity -A clippy::identity_op -A clippy::boxed_local -D dead_code
+          toolchain: ${{ env.nightly }}
+
   test:
     runs-on: ubuntu-latest-16-cores
 
@@ -49,21 +70,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-build-target-
 
-      - name: Rustfmt Check
-        uses: actions-rust-lang/rustfmt@v1
-
-      - name: Clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features -- -A clippy::type_complexity -A clippy::identity_op -A clippy::boxed_local -D dead_code
-          toolchain: ${{ env.nightly }}
-
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --bin nodle-parachain
+        run: cargo build --release --bin nodle-parachain
+
+      - name: Unit tests
+        run: cargo test --all-features
 
       - name: Compare metadata
         run: |
