--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,12 @@ jobs:
           toolchain: ${{ env.nightly }}
           target: ${{ env.target }}
           components: clippy
-      - run: |
-          cargo clippy --all-features -- -W clippy::type_complexity -W clippy::identity_op -W clippy::boxed_local -D dead_code
-        name: clippy
-        id: clippy
+      - name: Clippy
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features -- -A clippy::type_complexity -A clippy::identity_op -A clippy::boxed_local -D dead_code
+          toolchain: ${{ env.nightly }}
   rustfmt:
     runs-on: ubuntu-latest-8-cores
     steps:
